hphp/test/slow/coeffects/parse-memoize-1.php.expectf
Fatal error: This function cannot be memoized because it has a polymorphic context in %s on line 3
